--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,6 @@ sdmVersion=1.0.11.RELEASE
 graphqlKotlinVersion=5.3.2
 mustacheVersion=0.9.10
 bouncyCastleVersion=1.61
+graphqlJavaVersion=17.0
+hibernateTypesVersion=2.16.1
+apacheCommonsVersion=3.12.0
