--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3.4"
+version: "3.7"
 services:
   db:
     image: postgres
@@ -12,6 +12,23 @@ services:
     image: adminer
     ports:
       - "8081:8080"
+  minio:
+    image: quay.io/minio/minio:RELEASE.2022-04-30T22-23-53Z
+    command: server --console-address ":9001" /data/minio/
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    volumes:
+      - minio-data:/data
+
 #  app:
 #    image: public-api
 #    depends_on:
@@ -22,3 +39,6 @@ services:
 #      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/prizy-web
 #      - SPRING_DATASOURCE_USERNAME=postgres
 #      - SPRING_DATASOURCE_PASSWORD=mysecretpassword
+
+volumes:
+  minio-data:
