implement asset storage and serving

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,7 @@ mustacheVersion=0.9.10
 bouncyCastleVersion=1.61
 graphqlJavaVersion=17.0
 hibernateTypesVersion=2.16.1
-apacheCommonsVersion=3.12.0
+commonsLangVersion=3.12.0
+commonsIOVersion=2.8.0
+minioVersion=8.3.9
+okHttpVersion=4.9.3
