--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ shadowVersion=7.1.2
 dgsCodegenVersion=5.1.17
 springBootVersion=2.6.7
 springAotVersion=0.11.4
+springBootAdminVersion=2.4.1
 sdmVersion=1.0.11.RELEASE
 graphqlKotlinVersion=5.3.2
 mustacheVersion=0.9.10
