--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,29 +20,22 @@ services:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
       interval: 30s
       timeout: 20s
       retries: 3
     volumes:
       - minio-data:/data
+  smtp:
+    image: namshi/smtp
+    ports:
+      - "25:25"
   admin:
     image: slydeveloper/spring-boot-admin
     ports:
-      - 1111:1111
+      - "1111:1111"
     environment:
-      SPRING_BOOT_ADMIN_SECURITY_ENABLED: false
-
-#  app:
-#    image: public-api
-#    depends_on:
-#      - db
-#    ports:
-#      - "8080:8080"
-#    environment:
-#      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/prizy-web
-#      - SPRING_DATASOURCE_USERNAME=postgres
-#      - SPRING_DATASOURCE_PASSWORD=mysecretpassword
+      SPRING_BOOT_ADMIN_SECURITY_ENABLED: "false"
 
 volumes:
   db-data:
