--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,11 @@
-name: Main Pipeline
+name: Build Pipeline
 
 on:
   push:
     branches:
       - main
+    tags:
+      - v*
   pull_request:
     branches:
       - main
@@ -62,10 +64,10 @@ jobs:
       - name: Publish docker image
         run: docker push ${{ secrets.DOCKER_REGISTRY }}/public-api:${{ env.VERSION }}
 
-  deploy:
+  deploy-staging:
     runs-on: ubuntu-latest
     needs: [ build, publish ]
-    if: ${{ github.event_name != 'pull_request' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     steps:
       - uses: actions/checkout@v3
 
@@ -84,3 +86,26 @@ jobs:
 
       - name: Deploy to staging
         run: .delivery/upgrade.sh ${{ secrets.STAGING_APP_ID }} ${{ env.VERSION }}
+
+  deploy-production:
+    runs-on: ubuntu-latest
+    needs: [ build, publish ]
+    if: ${{ github.ref_type == 'tag' }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+      - name: Set version
+        run: |
+          VERSION=$(cat version.txt)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Prepare deployment script
+        run: chmod +x .delivery/upgrade.sh
+
+      - name: Deploy to production
+        run: .delivery/upgrade.sh ${{ secrets.PRODUCTION_APP_ID }} ${{ env.VERSION }}
