--- a/public-api/src/main/resources/application-staging.yaml
+++ b/public-api/src/main/resources/application-staging.yaml
@@ -1,8 +1,12 @@
 graphql.playground.enabled: true
 
-spring.boot.admin.client:
-  url: https://spring-boot-admin-rdhrb.ondigitalocean.app
-  instance.name: public-api-staging
+spring:
+  mail:
+    host: email-smtp.eu-west-3.amazonaws.com
+    port: 587
+  boot.admin.client:
+    url: https://spring-boot-admin-rdhrb.ondigitalocean.app
+    instance.name: public-api-staging
 
 prizy:
   storage:
