--- a/public-api/src/main/resources/application-production.yaml
+++ b/public-api/src/main/resources/application-production.yaml
@@ -11,6 +11,9 @@ spring:
       service-url: https://api.prizy.io
 
 prizy:
+  server:
+    url: https://api.prizy.io
+
   storage:
     endpoint: fra1.digitaloceanspaces.com
     server-url: https://api.prizy.io
