--- a/public-api/src/main/resources/application-staging.yaml
+++ b/public-api/src/main/resources/application-staging.yaml
@@ -11,6 +11,9 @@ spring:
       service-url: https://api.stg.prizy.io
 
 prizy:
+  server:
+    url: https://api.stg.prizy.io
+
   storage:
     endpoint: fra1.digitaloceanspaces.com
     server-url: https://api.stg.prizy.io
