--- a/public-api/src/main/resources/application-local.yaml
+++ b/public-api/src/main/resources/application-local.yaml
@@ -15,6 +15,9 @@ spring:
     password: mysecretpassword
 
 prizy:
+  server:
+    url: http://localhost:8080
+
   storage:
     region: local
     access-key: minioadmin
