fix ranking row persistence

--- a/public-api/src/main/resources/application-local.yaml
+++ b/public-api/src/main/resources/application-local.yaml
@@ -16,7 +16,7 @@ spring:
 
 prizy:
   logging:
-    log-to-elastic-search: true
+    log-to-elastic-search: false
 
   server:
     url: http://localhost:8080
