--- a/public-api/src/main/resources/application-staging.yaml
+++ b/public-api/src/main/resources/application-staging.yaml
@@ -9,8 +9,15 @@ spring:
     instance:
       name: public-api-staging
       service-url: https://api.stg.prizy.io
+  elasticsearch:
+    uris: https://elastic.prizy.io:443
+    username: elastic
 
 prizy:
+  logging:
+    log-to-elastic-search: true
+    index-name: prizy.logs.staging
+
   server:
     url: https://api.stg.prizy.io
 
