--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,13 +33,8 @@ jobs:
         with:
           arguments: build
 
-  publish:
-    runs-on: ubuntu-latest
-    needs: build
-    if: ${{ github.event_name != 'pull_request' }}
-    steps:
-      - uses: actions/checkout@v3
       - name: Prepare docker tag
+        if: ${{ github.event_name != 'pull_request' }}
         run: |
           chmod +x .delivery/tag.sh
           .delivery/tag.sh
@@ -47,22 +42,28 @@ jobs:
           echo "TAG=$TAG" >> $GITHUB_ENV
 
       - name: Install doctl
+        if: ${{ github.event_name != 'pull_request' }}
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
       - name: Login to docker registry
+        if: ${{ github.event_name != 'pull_request' }}
         run: doctl registry login --access-token ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
       - name: Build docker image
-        run: docker build . -t ${{ secrets.DOCKER_REGISTRY }}/public-api:${{ env.TAG }}
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        with:
+          arguments: -Pregistry=${{ secrets.DOCKER_REGISTRY }} -Ptag=${{ env.TAG }} bootBuildImage
 
       - name: Publish docker image
+        if: ${{ github.event_name != 'pull_request' }}
         run: docker push ${{ secrets.DOCKER_REGISTRY }}/public-api:${{ env.TAG }}
 
   deploy-staging:
     runs-on: ubuntu-latest
-    needs: [ build, publish ]
+    needs: [ build ]
     if: ${{ github.ref == 'refs/heads/main' }}
     steps:
       - uses: actions/checkout@v3
@@ -87,7 +88,7 @@ jobs:
 
   deploy-production:
     runs-on: ubuntu-latest
-    needs: [ build, publish ]
+    needs: [ build ]
     if: ${{ github.ref_type == 'tag' }}
     steps:
       - uses: actions/checkout@v3
