fix resource bonus values and logic

--- a/public-api/src/main/resources/application.yaml
+++ b/public-api/src/main/resources/application.yaml
@@ -15,8 +15,10 @@ prizy:
   resources:
     referral-key-bonus: 6
     referrer-key-bonus: 6
-    daily-diamonds-bonus: [ 100, 25, 25, 25, 25, 200 ]
-    daily-lives-bonus: [ 20, 8, 8, 8, 8, 50 ]
+    daily-diamonds-bonus: 25
+    daily-lives-bonus: 8
+    initial-diamonds-bonus: 100
+    initial-lives-bonus: 20
     daily-keys-bonus: 3
     lives-boost-multiplier: 2
     diamonds-boost-multiplier: 25
