--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 kotlinVersion=1.6.21
 slf4jVersion=1.7.36
-springBootVersion=2.6.7
+springBootVersion=2.7.1
 sdmVersion=1.0.11.RELEASE
 graphqlKotlinVersion=5.3.2
 mustacheVersion=0.9.10
@@ -12,3 +12,4 @@ commonsIOVersion=2.8.0
 minioVersion=8.3.9
 okHttpVersion=4.9.3
 releasePluginVersion=1.2.3
+springAotVersion=0.12.0
