--- a/public-api/src/main/resources/application-local.yaml
+++ b/public-api/src/main/resources/application-local.yaml
@@ -24,6 +24,10 @@ prizy:
     endpoint: http://localhost:9000
     server-url: http://localhost:8080
 
+  push:
+    app-id: ""
+    api-key: ""
+
   security:
     jwt:
       key-id: local
