create integration test infrastructure

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ commonsIOVersion=2.8.0
 minioVersion=8.3.9
 okHttpVersion=4.9.3
 releasePluginVersion=1.2.3
+assertJDBVersion=2.0.2
+restAssuredVersion=4.5.1
