add ranking notifier integration tests

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@ okHttpVersion=4.9.3
 releasePluginVersion=1.2.3
 assertJDBVersion=2.0.2
 restAssuredVersion=4.5.1
+awaitilityVersion=4.2.0
+mockserverVersion=5.13.2
