--- a/public-api/src/integrationTest/resources/application-test.yaml
+++ b/public-api/src/integrationTest/resources/application-test.yaml
@@ -24,8 +24,9 @@ prizy:
     server-url: http://localhost:8080
 
   push:
-    app-id: ""
-    api-key: ""
+    app-id: "ea6de854-1641-4319-b764-cc364d1cb78d"
+    api-key: "778b2f80-bf4f-45ef-8838-5cc83fdb31fe"
+    api-url: http://localhost:25099
 
   security:
     jwt:
