fix nullable input fields

--- a/public-api/src/integrationTest/resources/application-test.yaml
+++ b/public-api/src/integrationTest/resources/application-test.yaml
@@ -1,6 +1,6 @@
 spring:
-  flyway:
-    locations: classpath:/db/migration/h2
+  datasource:
+    url: jdbc:tc:postgresql:14.5:///prizy-web-test
   mail:
     host: localhost
     port: 25
@@ -26,7 +26,7 @@ prizy:
   push:
     app-id: "00000000-0000-0000-0000-000000000000"
     api-key: "00000000-0000-0000-0000-000000000000"
-    api-url: http://localhost:25099
+    api-url: http://localhost:25099/onesignal
 
   security:
     jwt:
