--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
+#Properties
+systemProp.file.encoding=utf-8
+file.encoding=utf-8
+
+# Dependencies
 kotlinVersion=1.6.21
 slf4jVersion=1.7.36
 springBootVersion=2.7.3
@@ -18,3 +23,4 @@ awaitilityVersion=4.2.0
 mockserverVersion=5.13.2
 jcvVersion=1.5.0
 testContainersVersion=1.17.3
+greenmailVersion=1.6.10
