--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,6 @@
 #Properties
 systemProp.file.encoding=utf-8
 file.encoding=utf-8
-
 # Dependencies
 kotlinVersion=1.7.10
 slf4jVersion=1.7.36
@@ -24,3 +23,4 @@ mockserverVersion=5.13.2
 jcvVersion=1.5.0
 testContainersVersion=1.17.3
 greenmailVersion=1.6.10
+elasticsearchVersion=8.4.1
