fix graphql logging and add contest rules conditional on user agent

--- a/public-api/src/main/resources/application.yaml
+++ b/public-api/src/main/resources/application.yaml
@@ -3,9 +3,11 @@ graphql.packages:
 
 management:
   endpoints.web.exposure.include: "*"
+  health.elasticsearch.enabled: false
 
 prizy:
   bootstrap.enable-runners: true
+  graphql.logging.enabled: true
 
   app.version:
     latest-app-version: 1.5.1
