--- a/public-api/src/main/resources/application-local.yaml
+++ b/public-api/src/main/resources/application-local.yaml
@@ -1,6 +1,4 @@
-graphql:
-  playground:
-    enabled: true
+graphql.playground.enabled: true
 
 spring:
   mail:
@@ -13,18 +11,11 @@ spring:
     password: mysecretpassword
 
 prizy:
+  bootstrap.enable-runners: false
+  graphql.logging.enabled: false
+
   server:
     url: http://localhost:8080
-
-  graphql:
-    logging:
-      enabled: true
-      scheme: https
-      host: elastic.ndogga.com
-      port: 443
-      username: elastic
-      password: A68f73m99@
-      index: prizy-web-logs-local
 
   storage:
     region: local
