--- a/public-api/src/main/resources/application-staging.yaml
+++ b/public-api/src/main/resources/application-staging.yaml
@@ -18,3 +18,6 @@ prizy:
     issuer: prizy-staging
     audience: prizy-public-api
     algorithm: RS256
+
+logging.level:
+  io.prizy.graphql.logging.GraphQLWebLogger: DEBUG
